@@ -22,6 +22,8 @@ from sugar.graphics.icon import Icon
 from sugar.graphics.palette import Palette, WidgetInvoker
 
 class RadioToolButton(gtk.RadioToolButton):
+    __gtype_name__ = "SugarRadioToolButton"
+
     def __init__(self, named_icon=None, group=None):
         gtk.RadioToolButton.__init__(self, group=group)
         self._palette = None
@@ -38,9 +40,25 @@ class RadioToolButton(gtk.RadioToolButton):
     def set_palette(self, palette):
         self._palette = palette
         self._palette.props.invoker = WidgetInvoker(self.child)
+        self._palette.props.draw_gap = True
+        
+        self._palette.connect("popup", self._palette_changed)
+        self._palette.connect("popdown", self._palette_changed)
 
     def set_tooltip(self, text):
         self._palette = Palette(text)
         self._palette.props.invoker = WidgetInvoker(self.child)
+
+    def do_expose_event(self, event):
+        if self._palette:
+            if self._palette.is_up() or self.child.state == gtk.STATE_PRELIGHT:
+                invoker = self._palette.props.invoker
+                invoker.draw_invoker_rect(event, self._palette)
+
+        gtk.RadioToolButton.do_expose_event(self, event)
+    
+    def _palette_changed(self, palette):
+        # Force a redraw to update the invoker rectangle
+        self.queue_draw()
     
     palette = property(get_palette, set_palette)
