@@ -1,3 +1,4 @@
+* Draw an invoker that is connected with the palette for toolbuttons. (benzea)
 * Fix traceback when reading in saved WPA2 network configs (dcbw)
 * #2475 Retrieve correctly the file path for files in removable devices. (tomeu)
 * #2119 If config is missing start intro. (marco)
